// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree/demo/basic.md correctly 1`] = `
<div
  class="ant-tree ant-tree-icon-hide"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    class="ant-tree-list"
    style="position:relative"
  >
    <div
      class="ant-tree-list-holder"
    >
      <div>
        <div
          class="ant-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked ant-tree-treenode-leaf-last"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="parent 1"
            >
              <span
                class="ant-tree-title"
              >
                parent 1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-disabled ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked ant-tree-treenode-selected"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end-first-level"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked ant-tree-checkbox-disabled"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="parent 1-0"
            >
              <span
                class="ant-tree-title"
              >
                parent 1-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end-first-level"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-disabled"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end-first-level"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end ant-tree-indent-unit-end-first-level"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="parent 1-1"
            >
              <span
                class="ant-tree-title"
              >
                parent 1-1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end ant-tree-indent-unit-end-first-level"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="ant-tree-title"
              >
                <span
                  style="color:#1890ff"
                >
                  sss
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/basic-controlled.md correctly 1`] = `
<div
  class="ant-tree ant-tree-icon-hide"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    class="ant-tree-list"
    style="position:relative"
  >
    <div
      class="ant-tree-list-holder"
    >
      <div>
        <div
          class="ant-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-indeterminate"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-checkbox ant-tree-checkbox-indeterminate"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
              <span
                class="ant-tree-indent-unit"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit"
              />
              <span
                class="ant-tree-indent-unit"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-2
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-2
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_close"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
              title="0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/customized-icon.md correctly 1`] = `
<div
  class="ant-tree"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    class="ant-tree-list"
    style="position:relative"
  >
    <div
      class="ant-tree-list-holder"
    >
      <div>
        <div
          class="ant-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="parent 1"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__customize"
              >
                <span
                  aria-label="smile"
                  class="anticon anticon-smile"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="smile"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-title"
              >
                parent 1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-selected"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end-first-level"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal ant-tree-node-selected"
              title="leaf"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__customize"
              >
                <span
                  aria-label="meh"
                  class="anticon anticon-meh"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="meh"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 565H360c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h304c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end ant-tree-indent-unit-end-first-level"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__customize"
              >
                <span
                  aria-label="frown"
                  class="anticon anticon-frown"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="frown"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM512 533c-85.5 0-155.6 67.3-160 151.6a8 8 0 008 8.4h48.1c4.2 0 7.8-3.2 8.1-7.4C420 636.1 461.5 597 512 597s92.1 39.1 95.8 88.6c.3 4.2 3.9 7.4 8.1 7.4H664a8 8 0 008-8.4C667.6 600.3 597.5 533 512 533z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/directory.md correctly 1`] = `
<div
  class="ant-tree ant-tree-block-node ant-tree-directory"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    class="ant-tree-list"
    style="position:relative"
  >
    <div
      class="ant-tree-list-holder"
    >
      <div>
        <div
          class="ant-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="parent 0"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__customize"
              >
                <span
                  aria-label="folder-open"
                  class="anticon anticon-folder-open"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="folder-open"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M928 444H820V330.4c0-17.7-14.3-32-32-32H473L355.7 186.2a8.15 8.15 0 00-5.5-2.2H96c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h698c13 0 24.8-7.9 29.7-20l134-332c1.5-3.8 2.3-7.9 2.3-12 0-17.7-14.3-32-32-32zM136 256h188.5l119.6 114.4H748V444H238c-13 0-24.8 7.9-29.7 20L136 643.2V256zm635.3 512H159l103.3-256h612.4L771.3 768z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-title"
              >
                parent 0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf 0-0"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__customize"
              >
                <span
                  aria-label="file"
                  class="anticon anticon-file"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="file"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-title"
              >
                leaf 0-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf 0-1"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__customize"
              >
                <span
                  aria-label="file"
                  class="anticon anticon-file"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="file"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-title"
              >
                leaf 0-1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="parent 1"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__customize"
              >
                <span
                  aria-label="folder-open"
                  class="anticon anticon-folder-open"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="folder-open"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M928 444H820V330.4c0-17.7-14.3-32-32-32H473L355.7 186.2a8.15 8.15 0 00-5.5-2.2H96c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h698c13 0 24.8-7.9 29.7-20l134-332c1.5-3.8 2.3-7.9 2.3-12 0-17.7-14.3-32-32-32zM136 256h188.5l119.6 114.4H748V444H238c-13 0-24.8 7.9-29.7 20L136 643.2V256zm635.3 512H159l103.3-256h612.4L771.3 768z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-title"
              >
                parent 1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end-first-level"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf 1-0"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__customize"
              >
                <span
                  aria-label="file"
                  class="anticon anticon-file"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="file"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-title"
              >
                leaf 1-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end ant-tree-indent-unit-end-first-level"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf 1-1"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__customize"
              >
                <span
                  aria-label="file"
                  class="anticon anticon-file"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="file"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-title"
              >
                leaf 1-1
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/draggable.md correctly 1`] = `
<div
  class="ant-tree ant-tree-icon-hide ant-tree-block-node draggable-tree"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    class="ant-tree-list"
    style="position:relative"
  >
    <div
      class="ant-tree-list-holder"
    >
      <div>
        <div
          class="ant-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open draggable"
              draggable="true"
              title="0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open draggable"
              draggable="true"
              title="0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
              <span
                class="ant-tree-indent-unit"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_close"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close draggable"
              draggable="true"
              title="0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-2
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_close"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close draggable"
              draggable="true"
              title="0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/dynamic.md correctly 1`] = `
<div
  class="ant-tree ant-tree-icon-hide"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    class="ant-tree-list"
    style="position:relative"
  >
    <div
      class="ant-tree-list-holder"
    >
      <div>
        <div
          class="ant-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_close"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
              title="Expand to load"
            >
              <span
                class="ant-tree-title"
              >
                Expand to load
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_close"
            >
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
              title="Expand to load"
            >
              <span
                class="ant-tree-title"
              >
                Expand to load
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-leaf-last"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="Tree Node"
            >
              <span
                class="ant-tree-title"
              >
                Tree Node
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/line.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    showLine: 
    <button
      aria-checked="true"
      class="ant-switch ant-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      />
    </button>
    <br />
    <br />
    showIcon: 
    <button
      aria-checked="false"
      class="ant-switch"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      />
    </button>
    <br />
    <br />
    showLeafIcon: 
    <button
      aria-checked="true"
      class="ant-switch ant-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      />
    </button>
  </div>
  <div
    class="ant-tree ant-tree-icon-hide ant-tree-show-line"
  >
    <div
      role="tree"
    >
      <input
        style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
        tabindex="0"
        value=""
      />
    </div>
    <div
      class="ant-tree-list"
      style="position:relative"
    >
      <div
        class="ant-tree-list-holder"
      >
        <div>
          <div
            class="ant-tree-list-holder-inner"
            style="display:flex;flex-direction:column"
          >
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-open"
            >
              <span
                class="ant-tree-switcher ant-tree-switcher_open"
              >
                <span
                  aria-label="minus-square"
                  class="anticon anticon-minus-square ant-tree-switcher-line-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="minus-square"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                    />
                    <path
                      d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                title="parent 1"
              >
                <span
                  class="ant-tree-title"
                >
                  parent 1
                </span>
              </span>
            </div>
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-open"
            >
              <span
                aria-hidden="true"
                class="ant-tree-indent"
              >
                <span
                  class="ant-tree-indent-unit ant-tree-indent-unit-start"
                />
              </span>
              <span
                class="ant-tree-switcher ant-tree-switcher_open"
              >
                <span
                  aria-label="minus-square"
                  class="anticon anticon-minus-square ant-tree-switcher-line-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="minus-square"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                    />
                    <path
                      d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                title="parent 1-0"
              >
                <span
                  class="ant-tree-title"
                >
                  parent 1-0
                </span>
              </span>
            </div>
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-close"
            >
              <span
                aria-hidden="true"
                class="ant-tree-indent"
              >
                <span
                  class="ant-tree-indent-unit ant-tree-indent-unit-start"
                />
                <span
                  class="ant-tree-indent-unit ant-tree-indent-unit-start"
                />
              </span>
              <span
                class="ant-tree-switcher ant-tree-switcher-noop"
              >
                <span
                  aria-label="file"
                  class="anticon anticon-file ant-tree-switcher-line-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="file"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                title="leaf"
              >
                <span
                  class="ant-tree-title"
                >
                  leaf
                </span>
              </span>
            </div>
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-close"
            >
              <span
                aria-hidden="true"
                class="ant-tree-indent"
              >
                <span
                  class="ant-tree-indent-unit ant-tree-indent-unit-start"
                />
                <span
                  class="ant-tree-indent-unit"
                />
              </span>
              <span
                class="ant-tree-switcher ant-tree-switcher-noop"
              >
                <span
                  aria-label="file"
                  class="anticon anticon-file ant-tree-switcher-line-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="file"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                title="leaf"
              >
                <span
                  class="ant-tree-title"
                >
                  leaf
                </span>
              </span>
            </div>
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
            >
              <span
                aria-hidden="true"
                class="ant-tree-indent"
              >
                <span
                  class="ant-tree-indent-unit ant-tree-indent-unit-start"
                />
                <span
                  class="ant-tree-indent-unit ant-tree-indent-unit-end"
                />
              </span>
              <span
                class="ant-tree-switcher ant-tree-switcher-noop"
              >
                <span
                  aria-label="file"
                  class="anticon anticon-file ant-tree-switcher-line-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="file"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                title="leaf"
              >
                <span
                  class="ant-tree-title"
                >
                  leaf
                </span>
              </span>
            </div>
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-close"
            >
              <span
                aria-hidden="true"
                class="ant-tree-indent"
              >
                <span
                  class="ant-tree-indent-unit"
                />
              </span>
              <span
                class="ant-tree-switcher ant-tree-switcher_close"
              >
                <span
                  aria-label="plus-square"
                  class="anticon anticon-plus-square ant-tree-switcher-line-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="plus-square"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                    />
                    <path
                      d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                title="parent 1-1"
              >
                <span
                  class="ant-tree-title"
                >
                  parent 1-1
                </span>
              </span>
            </div>
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
            >
              <span
                aria-hidden="true"
                class="ant-tree-indent"
              >
                <span
                  class="ant-tree-indent-unit ant-tree-indent-unit-end"
                />
              </span>
              <span
                class="ant-tree-switcher ant-tree-switcher_close"
              >
                <span
                  aria-label="plus-square"
                  class="anticon anticon-plus-square ant-tree-switcher-line-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="plus-square"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                    />
                    <path
                      d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                title="parent 1-2"
              >
                <span
                  class="ant-tree-title"
                >
                  parent 1-2
                </span>
              </span>
            </div>
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
            >
              <span
                class="ant-tree-switcher ant-tree-switcher_close"
              >
                <span
                  aria-label="plus-square"
                  class="anticon anticon-plus-square ant-tree-switcher-line-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="plus-square"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                    />
                    <path
                      d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                title="parent 2"
              >
                <span
                  class="ant-tree-title"
                >
                  parent 2
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/search.md correctly 1`] = `
<div>
  <span
    class="ant-input-group-wrapper ant-input-search"
    style="margin-bottom:8px"
  >
    <span
      class="ant-input-wrapper ant-input-group"
    >
      <input
        class="ant-input"
        placeholder="Search"
        type="text"
        value=""
      />
      <span
        class="ant-input-group-addon"
      >
        <button
          class="ant-btn ant-btn-icon-only ant-input-search-button"
          type="button"
        >
          <span
            aria-label="search"
            class="anticon anticon-search"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </span>
  <div
    class="ant-tree ant-tree-icon-hide"
  >
    <div
      role="tree"
    >
      <input
        style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
        tabindex="0"
        value=""
      />
    </div>
    <div
      class="ant-tree-list"
      style="position:relative"
    >
      <div
        class="ant-tree-list-holder"
      >
        <div>
          <div
            class="ant-tree-list-holder-inner"
            style="display:flex;flex-direction:column"
          >
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-close"
            >
              <span
                class="ant-tree-switcher ant-tree-switcher_close"
              >
                <span
                  aria-label="caret-down"
                  class="anticon anticon-caret-down ant-tree-switcher-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="caret-down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                title=""
              >
                <span
                  class="ant-tree-title"
                >
                  <span>
                    <span
                      class="site-tree-search-value"
                    />
                    0-0
                  </span>
                </span>
              </span>
            </div>
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-close"
            >
              <span
                class="ant-tree-switcher ant-tree-switcher_close"
              >
                <span
                  aria-label="caret-down"
                  class="anticon anticon-caret-down ant-tree-switcher-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="caret-down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                title=""
              >
                <span
                  class="ant-tree-title"
                >
                  <span>
                    <span
                      class="site-tree-search-value"
                    />
                    0-1
                  </span>
                </span>
              </span>
            </div>
            <div
              class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
            >
              <span
                class="ant-tree-switcher ant-tree-switcher-noop"
              />
              <span
                class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                title=""
              >
                <span
                  class="ant-tree-title"
                >
                  <span>
                    <span
                      class="site-tree-search-value"
                    />
                    0-2
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/switcher-icon.md correctly 1`] = `
<div
  class="ant-tree ant-tree-icon-hide ant-tree-show-line"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    class="ant-tree-list"
    style="position:relative"
  >
    <div
      class="ant-tree-list-holder"
    >
      <div>
        <div
          class="ant-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="parent 1"
            >
              <span
                class="ant-tree-title"
              >
                parent 1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-open"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end-first-level"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="parent 1-0"
            >
              <span
                class="ant-tree-title"
              >
                parent 1-0
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end-first-level"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <span
                aria-label="file"
                class="anticon anticon-file ant-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end-first-level"
              />
              <span
                class="ant-tree-indent-unit"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <span
                aria-label="file"
                class="anticon anticon-file ant-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end-first-level"
              />
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <span
                aria-label="file"
                class="anticon anticon-file ant-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end-first-level"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_close"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
              title="parent 1-1"
            >
              <span
                class="ant-tree-title"
              >
                parent 1-1
              </span>
            </span>
          </div>
          <div
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-end ant-tree-indent-unit-end-first-level"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_close"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-tree-switcher-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
              title="parent 1-2"
            >
              <span
                class="ant-tree-title"
              >
                parent 1-2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
